--- a/app/resources/sass/style.scss
+++ b/app/resources/sass/style.scss
@@ -13,14 +13,36 @@ body {
   background: transparent;
   position: relative;
   min-width: 320px;
+  padding-top: 5px;
 }
-div {
-	padding: 5px;
-}
+
 
 @import 'media/media';
 
 .list{
 	border-radius: 4px;
 	padding: 3px;
+}
+.left-menu-border{
+  border: 2px solid black;
+  padding: 0;
+  margin: 0;
+}
+.btn-custom{
+  padding: 6px 6px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  display: inline-block;
+}
+.random-color{
+  border: 1px solid black;
+  border-radius: 3px;
+  background-color: black;
+    width: 28px;
+    height: 34px;
+    display: inline-block;
+    /* margin-top: 5px; */
+    /* margin-bottom: 5px; */
+    position: relative;
+
 }
